feat: Lücken füllen, +63 Fragen, Stats in Modulauswahl
- MD-Lücken gefüllt: Modul 02 (Loops, Math API), 04 (var, initializers),
  05 (Overloading, Varargs), 08 (ArrayDeque, SequencedCollection),
  09 (Queue/Deque-Ops, entrySet), 10 (effectively final, Methodreferenzen),
  11 (flatMap, groupingBy, orElseGet), 12 (initCause, finally-return),
  13 (Console, transient), 14 (Virtual Threads, CountDownLatch, ScopedValue),
  15 (JPMS exports/opens, automatic module, unnamed classes)
- 63 neue Fragen (265 → 328); Modul 2/3: 27/26, Rest: 14 je
- CodeExampleTests.java + StructuralExamples.java: 82+34 kompilierbare Tests
- Modulauswahl: Stats-Spalte mit ✓richtig ✗falsch ?offen pro Modul

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>